Bump to Spring Boot 4 and add Java 25 conventions (#176)
* Bump to Spring Boot 4

* adopt Java 25 conventions