@@ -36,7 +36,7 @@ import io.github.loicgreffier.streams.cogroup.app.KafkaStreamsTopology;
 import io.github.loicgreffier.streams.cogroup.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
@@ -98,7 +98,7 @@ class KafkaStreamsCogroupApplicationTest {
     @AfterEach
     void tearDown() throws IOException {
         testDriver.close();
-        Files.deleteIfExists(Paths.get(STATE_DIR));
+        Files.deleteIfExists(Path.of(STATE_DIR));
         MockSchemaRegistry.dropScope(MOCK_SCHEMA_REGISTRY_URL);
     }
 
@@ -112,8 +112,8 @@ class KafkaStreamsCogroupApplicationTest {
 
         List<KeyValue<String, KafkaUserAggregate>> results = outputTopic.readKeyValuesToList();
 
-        assertEquals("Simpson", results.get(0).key);
-        assertIterableEquals(List.of(homer), results.get(0).value.getUsers());
+        assertEquals("Simpson", results.getFirst().key);
+        assertIterableEquals(List.of(homer), results.getFirst().value.getUsers());
 
         assertEquals("Simpson", results.get(1).key);
         assertIterableEquals(List.of(homer, marge), results.get(1).value.getUsers());
@@ -134,8 +134,8 @@ class KafkaStreamsCogroupApplicationTest {
 
         List<KeyValue<String, KafkaUserAggregate>> results = outputTopic.readKeyValuesToList();
 
-        assertEquals("Simpson", results.get(0).key);
-        assertIterableEquals(List.of(homer), results.get(0).value.getUsers());
+        assertEquals("Simpson", results.getFirst().key);
+        assertIterableEquals(List.of(homer), results.getFirst().value.getUsers());
 
         assertEquals("Simpson", results.get(1).key);
         assertIterableEquals(List.of(homer, marge), results.get(1).value.getUsers());
@@ -159,8 +159,8 @@ class KafkaStreamsCogroupApplicationTest {
 
         List<KeyValue<String, KafkaUserAggregate>> results = outputTopic.readKeyValuesToList();
 
-        assertEquals("Simpson", results.get(0).key);
-        assertIterableEquals(List.of(homer), results.get(0).value.getUsers());
+        assertEquals("Simpson", results.getFirst().key);
+        assertIterableEquals(List.of(homer), results.getFirst().value.getUsers());
 
         assertEquals("Simpson", results.get(1).key);
         assertIterableEquals(List.of(homer, marge), results.get(1).value.getUsers());
