@@ -37,7 +37,7 @@ import io.github.loicgreffier.streams.exception.handler.processing.dsl.error.Cus
 import io.github.loicgreffier.streams.exception.handler.processing.dsl.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
@@ -96,7 +96,7 @@ class KafkaStreamsExceptionHandlerProcessingDslApplicationTest {
     @AfterEach
     void tearDown() throws IOException {
         testDriver.close();
-        Files.deleteIfExists(Paths.get(STATE_DIR));
+        Files.deleteIfExists(Path.of(STATE_DIR));
         MockSchemaRegistry.dropScope(MOCK_SCHEMA_REGISTRY_URL);
     }
 
