@@ -32,7 +32,7 @@ import io.github.loicgreffier.streams.flatmap.app.KafkaStreamsTopology;
 import io.github.loicgreffier.streams.flatmap.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
@@ -86,7 +86,7 @@ class KafkaStreamsFlatMapApplicationTest {
     @AfterEach
     void tearDown() throws IOException {
         testDriver.close();
-        Files.deleteIfExists(Paths.get(STATE_DIR));
+        Files.deleteIfExists(Path.of(STATE_DIR));
         MockSchemaRegistry.dropScope(MOCK_SCHEMA_REGISTRY_URL);
     }
 
@@ -96,7 +96,7 @@ class KafkaStreamsFlatMapApplicationTest {
 
         List<KeyValue<String, String>> results = outputTopic.readKeyValuesToList();
 
-        assertEquals(KeyValue.pair("HOMER", "Homer"), results.get(0));
+        assertEquals(KeyValue.pair("HOMER", "Homer"), results.getFirst());
         assertEquals(KeyValue.pair("SIMPSON", "Simpson"), results.get(1));
     }
 
