@@ -34,7 +34,7 @@ import io.github.loicgreffier.streams.merge.app.KafkaStreamsTopology;
 import io.github.loicgreffier.streams.merge.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
@@ -94,7 +94,7 @@ class KafkaStreamsMergeApplicationTest {
     @AfterEach
     void tearDown() throws IOException {
         testDriver.close();
-        Files.deleteIfExists(Paths.get(STATE_DIR));
+        Files.deleteIfExists(Path.of(STATE_DIR));
         MockSchemaRegistry.dropScope(MOCK_SCHEMA_REGISTRY_URL);
     }
 
@@ -108,7 +108,7 @@ class KafkaStreamsMergeApplicationTest {
 
         List<KeyValue<String, KafkaUser>> results = outputTopic.readKeyValuesToList();
 
-        assertEquals(KeyValue.pair("1", firstUser), results.get(0));
+        assertEquals(KeyValue.pair("1", firstUser), results.getFirst());
         assertEquals(KeyValue.pair("2", secondUser), results.get(1));
     }
 
