@@ -34,7 +34,7 @@ import io.github.loicgreffier.streams.reduce.app.KafkaStreamsTopology;
 import io.github.loicgreffier.streams.reduce.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
@@ -91,7 +91,7 @@ class KafkaStreamsReduceApplicationTest {
     @AfterEach
     void tearDown() throws IOException {
         testDriver.close();
-        Files.deleteIfExists(Paths.get(STATE_DIR));
+        Files.deleteIfExists(Path.of(STATE_DIR));
         MockSchemaRegistry.dropScope(MOCK_SCHEMA_REGISTRY_URL);
     }
 
@@ -114,7 +114,7 @@ class KafkaStreamsReduceApplicationTest {
 
         List<KeyValue<String, KafkaUser>> results = outputTopic.readKeyValuesToList();
 
-        assertEquals(KeyValue.pair(CountryCode.US.toString(), oldestUs), results.get(0));
+        assertEquals(KeyValue.pair(CountryCode.US.toString(), oldestUs), results.getFirst());
         assertEquals(KeyValue.pair(CountryCode.US.toString(), oldestUs), results.get(1));
         assertEquals(KeyValue.pair(CountryCode.BE.toString(), youngestBe), results.get(2));
         assertEquals(KeyValue.pair(CountryCode.BE.toString(), oldestBe), results.get(3));
