@@ -34,7 +34,7 @@ import io.github.loicgreffier.streams.schedule.app.KafkaStreamsTopology;
 import io.github.loicgreffier.streams.schedule.serdes.SerdesUtils;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.List;
@@ -92,7 +92,7 @@ class KafkaStreamsScheduleApplicationTest {
     @AfterEach
     void tearDown() throws IOException {
         testDriver.close();
-        Files.deleteIfExists(Paths.get(STATE_DIR));
+        Files.deleteIfExists(Path.of(STATE_DIR));
         MockSchemaRegistry.dropScope(MOCK_SCHEMA_REGISTRY_URL);
     }
 
@@ -118,8 +118,8 @@ class KafkaStreamsScheduleApplicationTest {
         List<KeyValue<String, Long>> results = outputTopic.readKeyValuesToList();
 
         // 1st stream time punctuate
-        assertEquals("US", results.get(0).key);
-        assertEquals(1, results.get(0).value);
+        assertEquals("US", results.getFirst().key);
+        assertEquals(1, results.getFirst().value);
 
         // 2nd stream time punctuate
         assertEquals("US", results.get(1).key);
